--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,14 @@
+5-2-2015:
+
+Verify relay case:
+when DHCP ACK packet is coming from DHCP server, Check the code and test.
+
+static entries: 
+allow admin to add IP-MAC relation statically 
+
+
+
+/////////////////////////////////////////////////////////////
 Better form a DHCP packet struct and handle using that struct.
 
 After discussion with Raghu sir, IP source guard works only in L2 mode.
